force-app/main/default/objects/Task_Grid_Column__mdt/Task_Grid_Column__mdt.object-meta.xml
<CustomObject>
    <description>Created this metadata type to define which fields appear in your table.</description>
    <label>Task Grid Column</label>
    <pluralLabel>Task Grid Columns</pluralLabel>
</CustomObject>