force-app/main/default/objects/Task_Grid_Column__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <type>TextArea</type>
</CustomField>