force-app/main/default/objects/Task_Grid_Column__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The column header text.</description>
    <label>Label</label>
    <type>TextArea</type>
</CustomField>