force-app/main/default/objects/Task_Grid_Column__mdt/fields/Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object__c</fullName>
    <label>Lookup Object</label>
    <type>TextArea</type>
</CustomField>